<resources>
    <string name="app_name">Chalan</string>
    <string name="chalan">Chalan</string>
    <string name="let_s_get_started">Empecemos!</string>
    <string name="image_contentDescription">imagen</string>
    <string name="intro_text_description">Encuentra a la persona que necesitas para completar tu proyecto o reparación.</string>
    <string name="sign_in">YA TENGO UNA CUENTA</string>
    <string name="sign_up">REGISTRARSE</string>
    <string name="sign_up_description_text">Introduce tu nombre, email y contraseña, para registrarte.</string>
    <string name="sign_in_description_text">Introduce tu email y contraseña para entrar al sistema.</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="please_click_back_again_to_exit">Da click de nuevo para salir.</string>
    <string name="please_wait">Porfavor espera&#8230;</string>
    <string name="nav_my_profile">Mi Perfil</string>
    <string name="nav_sign_out">Salir</string>
    <string name="username">Usuario</string>
    <string name="mobile">Celular</string>
    <string name="update">ACTUALIZAR</string>
    <string name="my_profile_title">Mi Perfil</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="ya_tengo_una_cuenta">YA TENGO UNA CUENTA</string>
    <string name="entrar">ENTRAR</string>
    <string name="albanil">Albañil</string>
    <string name="selecciona_el_servicio_que_buscas">Selecciona el servicio que buscas:</string>
    <string name="title_activity_maps">Selecciona el lugar</string>
    <string name="CodigoPostal">O Introduce el codigo postal manualmente</string>
    <string name="descripcion_mapa">Selecciona el lugar donde quieres el servicio:</string>
    <string name="problema_foto_referencia">Inserta una foto de referencia para tu problema o consulta:</string>
    <string name="problema_describe_problema">Describe tu problema brevemente para que la persona que te ofrecera el servicio pueda saber que herramientas o suministros necesitara para ayudarte:</string>
    <string name="omitir">Omitir</string>
    <string name="enviar">Enviar</string>
    <string name="problema_descripcion_usuario">Describe tu problema aqui</string>
    <string name="estas_seguro">Estas seguro?</string>
    <string name="custom_dialog_maps_text">Estas seguro de que la dirección seleccionada es la correcta?</string>
    <string name="Cancelar">CANCELAR</string>
    <string name="Aceptar">ACEPTAR</string>
    <string name="problema_describe_titulo">Opcional: Describe tu problema</string>
</resources>