<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.ProblemaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarProblemaActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/tvInserta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:text="@string/problema_foto_referencia" />

    <ImageView
        android:id="@+id/ivFotoReferencia"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_image_24" />

    <TextView
        android:id="@+id/tvDescribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/problema_describe_problema" />

    <EditText
        android:id="@+id/etDescripcionProblema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/problema_descripcion_usuario"
        android:autofillHints="Problema" />

    <!-- LinearLayout para botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enviar"
            android:textColor="@color/white"
            android:background="@drawable/shape_button_rounded"/>

        <Button
            android:id="@+id/btnOmitir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/omitir"
            android:textColor="@color/purple_700"
            android:background="@drawable/shape_button_rounded_white"/>

    </LinearLayout>

</LinearLayout>

</ScrollView>